--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 </head>
 <body>
 
-  Perfume
+  <p>Perfume</p>
 
-  Gabrielle Essence Eau De Parfum
+  <h1>Gabrielle Essence Eau De Parfum</h1>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
-  $149.99
-  $169.99
+  <div>
+    <p>$149.99</p>
+    <p>$169.99</p>
+  </div>
 
-  Add to Cart
+  <p>Add to Cart</p>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
