Added style to the body and main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./style.css">
   
   <title>Frontend Mentor | Product preview card component</title>
   
@@ -13,9 +14,9 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style> -->
 </head>
-<body>
+<body class="pt-10 pl-5 pr-5 pb-10">
 
-  <div>
+  <main class="happy">
     <img src="./images/image-product-mobile.jpg" alt="">
     <p>Perfume</p>
 
@@ -29,7 +30,7 @@
     </div>
 
     <button>Add to Cart</button>
-  </div>
+  </main>
 <!--   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
