--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
 </head>
 <body class="pt-10 pl-5 pr-5 pb-10">
 
-  <main class="happy">
+  <main class="main">
     <img src="./images/image-product-mobile.jpg" alt="">
-    <p>Perfume</p>
+    <section class="sect">
+      <p>Perfume</p>
 
-    <h1>Gabrielle Essence Eau De Parfum</h1>
+      <h2>Gabrielle Essence Eau De Parfum</h2>
 
-    <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
-    <div>
-      <p>$149.99</p>
-      <p>$169.99</p>
-    </div>
+      <div>
+        <p>$149.99</p>
+        <p>$169.99</p>
+      </div>
 
-    <button>Add to Cart</button>
+      <button>Add to Cart</button>
+    </section>
   </main>
 <!--   
   <div class="attribution">
