Added style to .perfume class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="main">
     <img src="./images/image-product-mobile.jpg" alt="">
     <section class="sect">
-      <p>Perfume</p>
+      <p class="Perfume">PERFUME</p>
 
       <h2>Gabrielle Essence Eau De Parfum</h2>
 
