--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
-      <div>
+      <div class="price">
         <p>$149.99</p>
         <p>$169.99</p>
       </div>
