--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <main class="main">
     <img src="./images/image-product-mobile.jpg" alt="">
     <section class="sect">
-      <p class="Perfume">PERFUME</p>
+      <p class="Perfume pl-1">PERFUME</p>
 
-      <h2>Gabrielle Essence Eau De Parfum</h2>
+      <h2 class="text-[35px] pt-3 pb-3">Gabrielle Essence Eau De Parfum</h2>
 
-      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+      <p style="line-height: 1.7rem;">A floral, solar and voluptuous <br> interpretation brcomposed by Olivier <br> Polge, Perfumer-Creator for the House of <br> CHANEL.</p>
 
       <div class="price">
         <p>$149.99</p>
