--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <p style="line-height: 1.7rem;">A floral, solar and voluptuous <br> interpretation brcomposed by Olivier <br> Polge, Perfumer-Creator for the House of <br> CHANEL.</p>
 
       <div class="price">
-        <p>$149.99</p>
-        <p>$169.99</p>
+        <p class="price1">$149.99</p>
+        <p class="price2">$169.99</p>
       </div>
 
       <button>Add to Cart</button>
