Added style to button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style> -->
 </head>
-<body class="pt-10 pl-5 pr-5 pb-10">
+<body class="pt-7 pl-5 pr-5 pb-7">
 
   <main class="main">
     <img src="./images/image-product-mobile.jpg" alt="">
@@ -30,7 +30,9 @@
         <p class="price2">$169.99</p>
       </div>
 
-      <button>Add to Cart</button>
+      <div class="btn">
+        <button>Add to Cart</button>
+      </div>
     </section>
   </main>
 <!--   
