Finished the Mobile version

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="sect">
       <p class="Perfume pl-1">PERFUME</p>
 
-      <h2 class="text-[35px] pt-3 pb-3">Gabrielle Essence Eau De Parfum</h2>
+      <h2 class=" pt-3 pb-3">Gabrielle Essence Eau De Parfum</h2>
 
       <p style="line-height: 1.7rem;">A floral, solar and voluptuous <br> interpretation brcomposed by Olivier <br> Polge, Perfumer-Creator for the House of <br> CHANEL.</p>
 
