--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style> -->
 </head>
-<body class="pt-7 pl-5 pr-5 pb-7">
+<body>
 
   <main class="main">
     <img src="./images/image-product-mobile.jpg" alt="">
