--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
 
   <main class="main">
-    <img src="./images/image-product-mobile.jpg" alt="">
+    <!-- <img src="./images/image-product-mobile.jpg" alt=""> -->
+     <div class="img"></div>
     <section class="sect">
       <p class="Perfume pl-1">PERFUME</p>
 
