--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <h2 class=" pt-3 pb-3">Gabrielle Essence Eau De Parfum</h2>
 
-      <p style="line-height: 1.7rem;">A floral, solar and voluptuous <br> interpretation brcomposed by Olivier <br> Polge, Perfumer-Creator for the House of <br> CHANEL.</p>
+      <p class="write">A floral, solar and voluptuous <br> interpretation composed by Olivier  Polge, Perfumer-Creator for the House of CHANEL.</p>
 
       <div class="price">
         <p class="price1">$149.99</p>
